030-software/fluxcd/apps/iptvnator/frontend/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: iptvnator
  annotations:
    dashboard.${domain}/name: iptvnator
    dashboard.${domain}/url: https://iptvnator.${domain}
    dashboard.${domain}/icon: television
spec:
  hostnames:
  - iptvnator.${domain}
  parentRefs:
  - name: cilium
    namespace: cilium
  rules:
  - backendRefs:
    - name: iptvnator
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
